src/objects/ERM_To_Stream__mdt.object
<CustomObject>
    <description>This metadata is created to store RequestType,Platform,Relationship,Vendor,QualifyingEvent Mappings</description>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pltID</fullName>
                    <default>true</default>
                    <label>pltID</label>
                </value>
                <value>
                    <fullName>rqtID</fullName>
                </value>
                <value>
                    <fullName>relID</fullName>
                </value>
                <value>
                    <fullName>vndID</fullName>
                </value>
                <value>
                    <fullName>qerID</fullName>
                </value>
                <value>
                    <fullName>rteid</fullName>
                </value>
                <value>
                    <fullName>msID</fullName>
                </value>
                <value>
                    <fullName>genID</fullName>
                </value>
                <value>
                    <fullName>terID</fullName>
                </value>
                <value>
                    <fullName>terLevelID</fullName>
                </value>
                <value>
                    <fullName>accTypeID</fullName>
                </value>
                <value>
                    <fullName>appeaID</fullName>
                </value>
                <value>
                    <fullName>deptID</fullName>
                </value>
                <value>
                    <fullName>CPTINrelID</fullName>
                </value>
                <value>
                    <fullName>NiceccID</fullName>
                </value>
                <value>
                    <fullName>reptID</fullName>
                </value>
                <value>
                    <fullName>DivID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ERM To Stream</label>
    <pluralLabel>ERM To Stream</pluralLabel>
</CustomObject>